sack off browserify and nodemon in favour of webpack

--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html>
 <head>
     <title>Premix</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Permanent+Marker">
-    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -37,6 +33,6 @@
     </div>
 </footer>
 
-<script src="main.js"></script>
+<script src="public/main.js"></script>
 </body>
 </html>
