--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
 <html>
 <head>
-    <title>Premix</title>
+    <title>premix</title>
+    <link rel="stylesheet" type="text/css" href="styles/loader.css">
 </head>
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<div id="loading-overlay">
+    <h1 ><strong></strong></span></h1>
+    <div id="loader">
+    </div>
+</div>
+
+<nav id="header" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <div id="logo">
-                <h1><span>premix</span><strong>DJ</strong></h1>
+                <h1 class="sr-only"><span>premix</span><strong>DJ</strong></h1>
             </div>
         </div>
     </div>
